--- a/css/style.scss
+++ b/css/style.scss
@@ -1,13 +1,15 @@
 header{
   background-image: url("../images/bg_header.png");
   background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
   padding-bottom: 76px;
   width: 100%;
   margin: auto;
-  background-position: center;
+  background-position: center ;
   position: relative;
   min-height: 740px;
-
+  height: 100%;
 }
 .navbar-toggle .icon-bar{
   background-color: #000;
@@ -175,5 +177,60 @@ text-align: left;
   color: #81868e;
   text-align: center;
   margin-bottom: 65px;
-
 }
+
+  .four{
+    .hov{
+      height: 319px;
+      position: relative;
+      padding: 0px;
+      &:after{
+        content: "";
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: #000000;
+        color: #FFF;
+        text-align: center;
+        padding-top: 150px;
+        text-transform: uppercase;
+        font-size: 20px;
+        font-weight: lighter;
+        opacity: 0.8;
+      }
+      &:hover{
+        &:after{
+          display: none;
+        }
+      }
+    }
+    .first{
+      background-image: url("../images/section-four-pic1.png");
+      background-repeat: no-repeat;
+      background-attachment: scroll;
+      background-size: cover;
+      &:after{
+        content: "+";
+      }
+    }
+    .two{
+      background-image: url("../images/section-four-pic2.png");
+      background-repeat: no-repeat;
+      background-attachment: scroll;
+      background-size: cover;
+      &:after{
+        content: "VINTAGE";
+      }
+    }
+    .three{
+      background-image: url("../images/section-four-pic3.png");
+      background-repeat: no-repeat;
+      background-attachment: scroll;
+      background-size: cover;
+      &:after{
+        content: "Branding";
+
+      }
+    }
+  }
