--- a/css/style.css
+++ b/css/style.css
@@ -357,49 +357,19 @@ header p {
 .progress.pink .progress-left .progress-bar {
   animation: loading-4 0.4s linear forwards 1.8s; }
 
-.progress.green .progress-bar {
-  border-color: #1abc9c; }
-
-.progress.green .progress-left .progress-bar {
-  animation: loading-5 1.2s linear forwards 1.8s; }
-
 @keyframes loading-1 {
   0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg); }
+    -webkit-transform: rotateZ(0deg);
+    transform: rotateZ(0deg); }
   100% {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg); } }
+    -webkit-transform: rotateZ(-180deg);
+    transform: rotateZ(-180deg); } }
 @keyframes loading-2 {
   0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg); }
   100% {
-    -webkit-transform: rotate(144deg);
-    transform: rotate(144deg); } }
-@keyframes loading-3 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg); }
-  100% {
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg); } }
-@keyframes loading-4 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg); }
-  100% {
-    -webkit-transform: rotate(36deg);
-    transform: rotate(36deg); } }
-@keyframes loading-5 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg); }
-  100% {
-    -webkit-transform: rotate(126deg);
-    transform: rotate(126deg); } }
-@media only screen and (max-width: 990px) {
-  .progress {
-    margin-bottom: 20px; } }
+    -webkit-transform: rotate(-108deg);
+    transform: rotate(-108deg); } }
 
 /*# sourceMappingURL=style.css.map */
