--- a/css/style.scss
+++ b/css/style.scss
@@ -382,21 +382,16 @@ text-align: left;
 .progress.pink .progress-left .progress-bar{
   animation: loading-4 0.4s linear forwards 1.8s;
 }
-.progress.green .progress-bar{
-  border-color: #1abc9c;
-}
-.progress.green .progress-left .progress-bar{
-  animation: loading-5 1.2s linear forwards 1.8s;
-}
+
 @keyframes loading-1{
-  0%{
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
+ 0%{
+   -webkit-transform:rotateZ(0deg);
+   transform: rotateZ(0deg);
+ }
   100%{
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
+   -webkit-transform: rotateZ(-180deg);
+   transform: rotateZ(-180deg);
+ }
 }
 @keyframes loading-2{
   0%{
@@ -404,40 +399,73 @@ text-align: left;
     transform: rotate(0deg);
   }
   100%{
-    -webkit-transform: rotate(144deg);
-    transform: rotate(144deg);
+    -webkit-transform: rotate(-108deg);
+    transform: rotate(-108deg);
   }
 }
-@keyframes loading-3{
-  0%{
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100%{
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);
-  }
-}
-@keyframes loading-4{
-  0%{
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100%{
-    -webkit-transform: rotate(36deg);
-    transform: rotate(36deg);
-  }
-}
-@keyframes loading-5{
-  0%{
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100%{
-    -webkit-transform: rotate(126deg);
-    transform: rotate(126deg);
-  }
-}
-@media only screen and (max-width: 990px){
-  .progress{ margin-bottom: 20px; }
-}
+//@keyframes loading-3{
+//  0%{
+//    -webkit-transform: rotate(0deg);
+//    transform: rotate(0deg);
+//  }
+//  100%{
+//    -webkit-transform: rotate(90deg);
+//    transform: rotate(90deg);
+//  }
+//}
+//@keyframes loading-4{
+//  0%{
+//    -webkit-transform: rotate(0deg);
+//    transform: rotate(0deg);
+//  }
+//  100%{
+//    -webkit-transform: rotate(36deg);
+//    transform: rotate(36deg);
+//  }
+//}
+
+//@media only screen and (max-width: 990px){
+//  .progress{ margin-bottom: 20px; }
+//}
+//.progress .progress-bar {
+//  width: 100%;
+//  height: 100%;
+//  background: none;
+//  border-width: 4px;
+//  border-style: solid;
+//  position: absolute;
+//  top: 0;
+//}
+//.progress .progress-value {
+//  width: 90%;
+//  height: 90%;
+//  border-radius: 50%;
+//  background: #f3f3f3;
+//  font-size: 27px;
+//  color: #81868e;
+//  line-height: 125px;
+//  text-align: center;
+//  position: absolute;
+//  top: 5%;
+//  left: 5%;
+//}
+//
+//.progress .progress-left .progress-bar {
+//  left: 100%;
+//  border-top-right-radius: 67.5px;
+//  border-bottom-right-radius: 67.5px;
+//  border-left: 0;
+//  -webkit-transform-origin: center;
+//  transform-origin: center;
+//  -webkit-transform-origin: left;
+//  transform-origin: left;
+//}
+//.progress {
+//  width: 125px;
+//  height: 125px;
+//  /* line-height: 111px; */
+//  background: none;
+//  margin: 0 auto;
+//  box-shadow: none;
+//  position: relative;
+//}
