--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ header p {
   text-align: center;
   margin-bottom: 60px; }
 
-.icon-bar div a i {
+.second .icon-bar div a i {
   color: white;
   background-color: #81868e;
   border-radius: 50%;
@@ -249,6 +249,9 @@ header p {
 .container-fluid {
   padding: 0; }
 
+.six {
+  background-color: #f3f3f3; }
+
 .six h2 {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 20px;
@@ -264,9 +267,9 @@ header p {
   color: #81868e; }
 
 .progress {
-  width: 150px;
-  height: 150px;
-  line-height: 150px;
+  width: 125px;
+  height: 125px;
+  line-height: 125px;
   background: none;
   margin: 0 auto;
   box-shadow: none;
@@ -277,7 +280,7 @@ header p {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  border: 12px solid #fff;
+  border: 3px solid #047378;
   position: absolute;
   top: 0;
   left: 0; }
@@ -297,20 +300,21 @@ header p {
   width: 100%;
   height: 100%;
   background: none;
-  border-width: 12px;
+  border-width: 4px;
   border-style: solid;
   position: absolute;
   top: 0; }
 
 .progress .progress-left .progress-bar {
   left: 100%;
-  border-top-right-radius: 80px;
-  border-bottom-right-radius: 80px;
+  border-top-right-radius: 67.5px;
+  border-bottom-right-radius: 67.5px;
   border-left: 0;
   -webkit-transform-origin: center;
   transform-origin: center;
   -webkit-transform-origin: left;
-  transform-origin: left; }
+  transform-origin: left;
+  animation: loading-1 1.8s linear forwards; }
 
 .progress .progress-right {
   right: 0; }
@@ -323,39 +327,35 @@ header p {
   -webkit-transform-origin: center;
   transform-origin: center;
   -webkit-transform-origin: right;
-  transform-origin: right;
-  animation: loading-1 1.8s linear forwards; }
+  transform-origin: right; }
+
+.progress.blue .progress-right .progress-bar {
+  animation: loading-2 1.5s linear forwards 1.8s; }
+
+.progress.yellow .progress-right .progress-bar {
+  animation: loading-3 1.5s linear forwards 1.8s; }
+
+.progress.pink .progress-right .progress-bar {
+  animation: loading-4 1.5s linear forwards 1.8s; }
 
 .progress .progress-value {
   width: 90%;
   height: 90%;
   border-radius: 50%;
   background: #f3f3f3;
-  font-size: 24px;
+  font-size: 25px;
   color: #81868e;
-  line-height: 135px;
+  line-height: 125px;
   text-align: center;
   position: absolute;
-  top: 5%;
+  top: 0%;
   left: 5%; }
 
-.progress.blue .progress-bar {
+.progress .progress-bar {
   border-color: #19bd9a; }
 
 .progress.blue .progress-left .progress-bar {
-  animation: loading-2 1.5s linear forwards 1.8s; }
-
-.progress.yellow .progress-bar {
-  border-color: #19bd9a; }
-
-.progress.yellow .progress-left .progress-bar {
-  animation: loading-3 1s linear forwards 1.8s; }
-
-.progress.pink .progress-bar {
-  border-color: #19bd9a; }
-
-.progress.pink .progress-left .progress-bar {
-  animation: loading-4 0.4s linear forwards 1.8s; }
+  animation: loading-1 1.8s linear forwards; }
 
 @keyframes loading-1 {
   0% {
@@ -371,5 +371,19 @@ header p {
   100% {
     -webkit-transform: rotate(-108deg);
     transform: rotate(-108deg); } }
+@keyframes loading-3 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(-90deg);
+    transform: rotate(-90deg); } }
+@keyframes loading-4 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(-36deg);
+    transform: rotate(-36deg); } }
 
 /*# sourceMappingURL=style.css.map */
