--- a/css/style.scss
+++ b/css/style.scss
@@ -121,7 +121,7 @@ header p{
   text-align: center;
   margin-bottom: 60px;
 }
-.icon-bar div a i {
+.second .icon-bar div a i {
   color: white;
   background-color: #81868e;
   border-radius: 50%;
@@ -271,6 +271,9 @@ text-align: left;
   .container-fluid{
   padding: 0;
   }
+.six{
+  background-color: #f3f3f3;
+}
   .six h2{
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 20px;
@@ -289,9 +292,9 @@ text-align: left;
   //Progress bar
 
 .progress{
-  width: 150px;
-  height: 150px;
-  line-height: 150px;
+  width: 125px;
+  height: 125px;
+  line-height: 125px;
   background: none;
   margin: 0 auto;
   box-shadow: none;
@@ -302,7 +305,7 @@ text-align: left;
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  border: 12px solid #fff;
+  border: 3px solid #047378;
   position: absolute;
   top: 0;
   left: 0;
@@ -322,25 +325,26 @@ text-align: left;
   width: 100%;
   height: 100%;
   background: none;
-  border-width: 12px;
+  border-width: 4px;
   border-style: solid;
   position: absolute;
   top: 0;
 }
 .progress .progress-left .progress-bar{
   left: 100%;
-  border-top-right-radius: 80px;
-  border-bottom-right-radius: 80px;
+  border-top-right-radius: 67.5px;
+  border-bottom-right-radius: 67.5px;
   border-left: 0;
   -webkit-transform-origin: center;
   transform-origin: center;
   -webkit-transform-origin: left;
   transform-origin: left;
+  animation: loading-1 1.8s linear forwards;
 }
 .progress .progress-right{
   right: 0;
 }
-.progress .progress-right .progress-bar{
+.progress .progress-right .progress-bar {
   left: -100%;
   border-top-left-radius: 80px;
   border-bottom-left-radius: 80px;
@@ -349,39 +353,49 @@ text-align: left;
   transform-origin: center;
   -webkit-transform-origin: right;
   transform-origin: right;
-  animation: loading-1 1.8s linear forwards;
+  }
+.progress.blue .progress-right .progress-bar{
+  animation: loading-2 1.5s linear forwards 1.8s;
+}
+.progress.yellow .progress-right .progress-bar{
+  animation: loading-3 1.5s linear forwards 1.8s;
+}
+.progress.pink .progress-right .progress-bar{
+  animation: loading-4 1.5s linear forwards 1.8s;
 }
 .progress .progress-value{
   width: 90%;
   height: 90%;
   border-radius: 50%;
   background: #f3f3f3;
-  font-size: 24px;
+  font-size: 25px;
   color: #81868e;
-  line-height: 135px;
+  line-height: 125px;
   text-align: center;
   position: absolute;
-  top: 5%;
+  top: 0%;
   left: 5%;
-}
-.progress.blue .progress-bar{
+  }
+//.progress .progress-value {
+//  width: 85%;
+//  height: 85%;
+//  border-radius: 50%;
+//  background: #f3f3f3;
+//  font-size: 25px;
+//  color: #81868e;
+//  line-height: 125px;
+//  text-align: center;
+//  position: absolute;
+//  top: 6%;
+//  left: 11%;
+//  z-index: 10;
+//}
+
+.progress .progress-bar{
   border-color: #19bd9a;
 }
-.progress.blue .progress-left .progress-bar{
-  animation: loading-2 1.5s linear forwards 1.8s;
-}
-.progress.yellow .progress-bar{
-  border-color: #19bd9a;
-}
-.progress.yellow .progress-left .progress-bar{
-  animation: loading-3 1s linear forwards 1.8s;
-}
-.progress.pink .progress-bar{
-  border-color: #19bd9a;
-}
-.progress.pink .progress-left .progress-bar{
-  animation: loading-4 0.4s linear forwards 1.8s;
-}
+.progress.blue .progress-left .progress-bar {
+  animation: loading-1 1.8s linear forwards; }
 
 @keyframes loading-1{
  0%{
@@ -403,69 +417,28 @@ text-align: left;
     transform: rotate(-108deg);
   }
 }
-//@keyframes loading-3{
-//  0%{
-//    -webkit-transform: rotate(0deg);
-//    transform: rotate(0deg);
-//  }
-//  100%{
-//    -webkit-transform: rotate(90deg);
-//    transform: rotate(90deg);
-//  }
-//}
-//@keyframes loading-4{
-//  0%{
-//    -webkit-transform: rotate(0deg);
-//    transform: rotate(0deg);
-//  }
-//  100%{
-//    -webkit-transform: rotate(36deg);
-//    transform: rotate(36deg);
-//  }
-//}
+@keyframes loading-3{
+  0%{
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100%{
+    -webkit-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+  }
+}
+@keyframes loading-4{
+  0%{
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100%{
+    -webkit-transform: rotate(-36deg);
+    transform: rotate(-36deg);
+  }
+}
 
 //@media only screen and (max-width: 990px){
 //  .progress{ margin-bottom: 20px; }
 //}
-//.progress .progress-bar {
-//  width: 100%;
-//  height: 100%;
-//  background: none;
-//  border-width: 4px;
-//  border-style: solid;
-//  position: absolute;
-//  top: 0;
-//}
-//.progress .progress-value {
-//  width: 90%;
-//  height: 90%;
-//  border-radius: 50%;
-//  background: #f3f3f3;
-//  font-size: 27px;
-//  color: #81868e;
-//  line-height: 125px;
-//  text-align: center;
-//  position: absolute;
-//  top: 5%;
-//  left: 5%;
-//}
-//
-//.progress .progress-left .progress-bar {
-//  left: 100%;
-//  border-top-right-radius: 67.5px;
-//  border-bottom-right-radius: 67.5px;
-//  border-left: 0;
-//  -webkit-transform-origin: center;
-//  transform-origin: center;
-//  -webkit-transform-origin: left;
-//  transform-origin: left;
-//}
-//.progress {
-//  width: 125px;
-//  height: 125px;
-//  /* line-height: 111px; */
-//  background: none;
-//  margin: 0 auto;
-//  box-shadow: none;
-//  position: relative;
-//}
+
