change a section six

--- a/css/style.css
+++ b/css/style.css
@@ -62,91 +62,85 @@ header p {
   left: 50%;
   bottom: 80px; }
 
-.first .row {
-  margin-bottom: 100px; }
-
 .fa-angle-down {
   color: white;
   margin: auto; }
 
-.col-md-6 h2 {
-  padding-top: 115px;
-  text-transform: uppercase;
+h2 {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 20px;
-  color: #333b46;
-  margin-bottom: 50px; }
-
-.col-md-6 p {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  color: #81868e;
-  margin-bottom: 45px; }
-
-.col-md-6 a {
-  border: 1px solid #333b46;
-  padding: 12px 29px;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  border-radius: 50px;
+  letter-spacing: 3px;
   color: #333b46; }
 
-.col-md-6 a:hover {
-  text-decoration: none; }
+p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  color: #81868e; }
 
-.col-md-4 img {
+.first .col-md-6 {
+  margin-bottom: 100px; }
+  .first .col-md-6 h2 {
+    padding-top: 115px;
+    text-transform: uppercase;
+    margin-bottom: 50px; }
+  .first .col-md-6 p {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    color: #81868e;
+    margin-bottom: 45px; }
+  .first .col-md-6 a {
+    border: 1px solid #333b46;
+    padding: 12px 29px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    border-radius: 50px;
+    color: #333b46; }
+    .first .col-md-6 a:hover {
+      text-decoration: none; }
+.first .col-md-4 img {
   padding-top: 80px;
   width: 100%;
   max-width: 200px; }
 
 .second {
   background-color: #f3f3f3; }
-
-.second h2:first-child {
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 20px;
-  color: #333b46;
-  letter-spacing: 3px;
-  text-align: center;
-  padding-top: 80px;
-  padding-bottom: 28px; }
-
-.second p {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  color: #81868e;
-  text-align: center;
-  margin-bottom: 60px; }
-
-.second .icon-bar div a i {
-  color: white;
-  background-color: #81868e;
-  border-radius: 50%;
-  height: 55px;
-  width: 55px;
-  text-align: center;
-  padding-top: 15px;
-  font-size: 28px;
-  margin: auto; }
-
-.icon-bar div a i:hover {
-  background-color: #19bd9a; }
-
-.icon-bar div {
-  display: inline-block;
-  margin-right: 27px; }
-
-.icon-bar {
-  text-align: center; }
+  .second h2:first-child {
+    color: #333b46;
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 28px; }
+  .second p {
+    color: #81868e;
+    text-align: center;
+    margin-bottom: 60px; }
+  .second .icon-bar {
+    text-align: center; }
+    .second .icon-bar div {
+      display: inline-block;
+      margin-right: 27px; }
+      .second .icon-bar div a i {
+        color: white;
+        background-color: #81868e;
+        border-radius: 50%;
+        height: 55px;
+        width: 55px;
+        text-align: center;
+        padding-top: 15px;
+        font-size: 28px;
+        margin: auto; }
+        .second .icon-bar div a i:hover {
+          background-color: #19bd9a; }
 
 .second .col-md-3 h2 {
   text-align: left;
-  padding-top: 40px; }
+  padding-top: 40px;
+  font-family: 'Open Sans', sans-serif;
+  letter-spacing: normal; }
 
 .second .col-md-3 p {
   text-align: left; }
 
-.second .col-md-3 p span:first-child {
+.second .col-md-3 p span {
   color: #19bd9a; }
 
 .second .col-md-7 p strong:nth-child(4) {
@@ -158,18 +152,10 @@ header p {
   padding-bottom: 60px; }
 
 .third h2 {
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 20px;
-  color: #333b46;
-  letter-spacing: 3px;
   text-align: center;
   padding-top: 80px;
   padding-bottom: 28px; }
-
 .third p {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  color: #81868e;
   text-align: center;
   margin-bottom: 65px; }
 
@@ -229,42 +215,74 @@ header p {
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover; }
-  .five p {
-    font-family: 'Open Sans', sans-serif;
+  .five .col-md-8 p {
     font-size: 20px;
     padding-top: 45px;
     padding-bottom: 45px;
     color: #fff; }
   .five .col-md-3 {
     padding: 50px; }
-  .five a {
-    border: 1px solid white;
-    padding: 12px 24px;
-    color: white;
-    text-decoration: none;
-    border-radius: 50px;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px; }
-
-.container-fluid {
-  padding: 0; }
+    .five .col-md-3 a {
+      border: 1px solid white;
+      padding: 12px 24px;
+      color: white;
+      text-decoration: none;
+      border-radius: 50px;
+      font-family: 'Open Sans', sans-serif;
+      font-size: 16px;
+      letter-spacing: 2px; }
 
 .six {
   background-color: #f3f3f3; }
+  .six h2 {
+    margin: 0;
+    padding-top: 81px;
+    padding-bottom: 42px;
+    text-align: center;
+    letter-spacing: 3px; }
+  .six p {
+    margin: 0;
+    text-align: center; }
+  .six .col-md-1 {
+    padding-top: 61px; }
+  .six .col-md-5 h2 {
+    text-align: left;
+    padding-bottom: 35px;
+    padding-top: 61px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    letter-spacing: 1px; }
+  .six .col-md-5 p {
+    text-align: left;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    margin-bottom: 43px; }
+  .six .col-md-5 p strong:first-child {
+    color: #19bd9a; }
+  .six .col-md-5 p strong:nth-child(2) {
+    color: #19bd9a; }
+  .six .col-md-5 .two {
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif; }
+  .six .col-md-6 {
+    padding-top: 115px;
+    padding-bottom: 182px; }
+  .six col-md-4 p {
+    padding-top: 24px; }
 
-.six h2 {
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 20px;
-  color: #333b46;
+.six a i {
+  color: white;
+  background-color: #81868e;
+  border-radius: 50%;
+  height: 55px;
+  width: 55px;
   text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 3px; }
-
-.six p {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  text-align: center;
-  color: #81868e; }
+  padding-top: 15px;
+  font-size: 28px;
+  margin: auto;
+  margin-bottom: 17px; }
+  .six a i:hover {
+    background-color: #19bd9a; }
 
 .progress {
   width: 125px;
