--- a/css/style.scss
+++ b/css/style.scss
@@ -63,95 +63,107 @@ header p{
   bottom: 80px;
 
 }
-.first .row {
-  margin-bottom: 100px;
-}
 .fa-angle-down{
   color: white;
   margin: auto;
-
 }
-.col-md-6 h2{
-  padding-top: 115px;
-  text-transform: uppercase;
+////////////////////////////END HEADER///////////////////////////////////
+h2{
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 20px;
-  color: #333b46;
-  margin-bottom: 50px;
-
-}
-.col-md-6 p{
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  color: #81868e;
-  margin-bottom: 45px;
-}
-.col-md-6 a{
-  border: 1px solid #333b46 ;
-  padding: 12px 29px;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  border-radius: 50px;
-  color: #333b46;
-}
-.col-md-6 a:hover{
-  text-decoration: none;
-}
-.col-md-4 img{
-  padding-top: 80px;
-  width: 100%;
-  max-width: 200px;
-}
-.second{
-  background-color: #f3f3f3;
-}
-.second h2:first-child{
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 20px;
-  color: #333b46;
   letter-spacing: 3px;
-  text-align: center;
-  padding-top: 80px;
-  padding-bottom: 28px;
+  color: #333b46;
 }
-.second p{
+p {
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   color: #81868e;
-  text-align: center;
-  margin-bottom: 60px;
 }
-.second .icon-bar div a i {
-  color: white;
-  background-color: #81868e;
-  border-radius: 50%;
-  //font-size: 15px;
-  height: 55px;
-  width: 55px;
-  text-align: center;
-  padding-top: 15px;
-  font-size: 28px;
-  margin: auto;
-}
-.icon-bar div a i:hover{
-  background-color: #19bd9a;
+////////////////////////////BEGIN Section-1///////////////////////////////////
+.first{
+  .col-md-6 {
+    margin-bottom: 100px;
+    h2 {
+      padding-top: 115px;
+      text-transform: uppercase;
+      margin-bottom: 50px;
+    }
+    p {
+      font-family: 'Open Sans', sans-serif;
+      font-size: 14px;
+      color: #81868e;
+      margin-bottom: 45px;
+    }
+    a {
+      border: 1px solid #333b46;
+      padding: 12px 29px;
+      font-family: 'Open Sans', sans-serif;
+      font-size: 14px;
+      border-radius: 50px;
+      color: #333b46;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+  .col-md-4{
+    img{
+      padding-top: 80px;
+      width: 100%;
+      max-width: 200px;
+    }
+  }
 }
 
-.icon-bar div{
-  display: inline-block;
-  margin-right: 27px;
+////////////////////////////END Section-1///////////////////////////////////
+////////////////////////////BEGIN Section-2/////////////////////////////////
+
+.second {
+  background-color: #f3f3f3;
+  h2:first-child {
+    color: #333b46;
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 28px;
   }
-.icon-bar{
-  text-align: center;
+  p {
+    color: #81868e;
+    text-align: center;
+    margin-bottom: 60px;
+  }
+  .icon-bar {
+    text-align: center;
+    div {
+      display: inline-block;
+      margin-right: 27px;
+      a i {
+        color: white;
+        background-color: #81868e;
+        border-radius: 50%;
+        height: 55px;
+        width: 55px;
+        text-align: center;
+        padding-top: 15px;
+        font-size: 28px;
+        margin: auto;
+        &:hover {
+          background-color: #19bd9a;
+        }
+      }
+    }
+  }
 }
+
 .second .col-md-3 h2{
-text-align: left;
+  text-align: left;
   padding-top: 40px;
+  font-family: 'Open Sans', sans-serif;
+  letter-spacing: normal;
 }
 .second .col-md-3 p{
   text-align: left;
 }
-.second .col-md-3 p span:first-child{
+.second .col-md-3 p span{
   color: #19bd9a;
 }
 .second .col-md-7 p strong:nth-child(4){
@@ -162,23 +174,21 @@ text-align: left;
   padding-top: 117px;
   padding-bottom: 60px;
 }
-.third h2{
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 20px;
-  color: #333b46;
-  letter-spacing: 3px;
-  text-align: center;
-  padding-top: 80px;
-  padding-bottom: 28px;
+////////////////////////////END Section-2///////////////////////////////////
+////////////////////////////BEGIN Section-3/////////////////////////////////
+.third {
+  h2 {
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 28px;
+  }
+  p {
+    text-align: center;
+    margin-bottom: 65px;
+  }
 }
-.third p{
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  color: #81868e;
-  text-align: center;
-  margin-bottom: 65px;
-}
-
+////////////////////////////END Section-3///////////////////////////////////
+////////////////////////////BEGIN Section-4/////////////////////////////////
   .four{
     .hov{
       height: 319px;
@@ -242,22 +252,24 @@ text-align: left;
       }
     }
   }
-  .five{
-    background-image: url("../images/green-line.png");
-    width: 100%;
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-size: cover;
+////////////////////////////END Section-4///////////////////////////////////
+////////////////////////////BEGIN Section-5/////////////////////////////////
+.five{
+  background-image: url("../images/green-line.png");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+  .col-md-8{
     p{
-      font-family: 'Open Sans', sans-serif;
       font-size: 20px;
       padding-top: 45px;
       padding-bottom: 45px;
       color: #fff;
     }
-    .col-md-3{
-      padding: 50px;
-    }
+  }
+  .col-md-3{
+    padding: 50px;
     a{
       border: 1px solid white;
       padding: 12px 24px;
@@ -266,31 +278,81 @@ text-align: left;
       border-radius: 50px;
       font-family: 'Open Sans', sans-serif;
       font-size: 16px;
+      letter-spacing: 2px;
     }
   }
-  .container-fluid{
-  padding: 0;
-  }
+}
+////////////////////////////END Section-5///////////////////////////////////
+////////////////////////////BEGIN Section-6/////////////////////////////////
 .six{
   background-color: #f3f3f3;
-}
-  .six h2{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 20px;
-    color: #333b46;
+  h2{
+    margin: 0;
+    padding-top: 81px;
+    padding-bottom: 42px;
     text-align: center;
-    text-transform: uppercase;
     letter-spacing: 3px;
   }
-.six p{
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  text-align: center;
-  color: #81868e;
+  p{
+    margin: 0;
+    text-align: center;
+  }
+  .col-md-1{
+    padding-top: 61px;
+  }
+  .col-md-5 {
+    h2 {
+      text-align: left;
+      padding-bottom: 35px;
+      padding-top: 61px;
+      font-family: 'Open Sans', sans-serif;
+      font-size: 20px;
+      letter-spacing: 1px;
+    }
+    p {
+      text-align: left;
+      font-family: 'Open Sans', sans-serif;
+      font-size: 16px;
+      margin-bottom: 43px;
+    }
+    p strong:first-child {
+      color: #19bd9a;
+    }
+    p strong:nth-child(2) {
+      color: #19bd9a;
+    }
+    .two{
+      font-size: 14px;
+      font-family: 'Open Sans', sans-serif;
+    }
+  }
+  .col-md-6{
+    padding-top: 115px;
+    padding-bottom: 182px;
+  }
+  col-md-4 p{
+    padding-top: 24px;
+  }
 }
 
-  //Progress bar
-
+.six {
+    a i {
+      color: white;
+      background-color: #81868e;
+      border-radius: 50%;
+      height: 55px;
+      width: 55px;
+      text-align: center;
+      padding-top: 15px;
+      font-size: 28px;
+      margin: auto;
+      margin-bottom: 17px;
+      &:hover {
+        background-color: #19bd9a;
+      }
+    }
+  }
+////////////////////////////Progress bar////////////////////////////////
 .progress{
   width: 125px;
   height: 125px;
@@ -441,4 +503,6 @@ text-align: left;
 //@media only screen and (max-width: 990px){
 //  .progress{ margin-bottom: 20px; }
 //}
+////////////////////////////END Section-6///////////////////////////////////
+////////////////////////////BEGIN Section-7/////////////////////////////////
 
