--- a/css/style.css
+++ b/css/style.css
@@ -267,8 +267,8 @@ p {
   .six .col-md-6 {
     padding-top: 115px;
     padding-bottom: 182px; }
-  .six col-md-4 p {
-    padding-top: 24px; }
+    .six .col-md-6 .col-md-4 p {
+      padding-top: 24px; }
 
 .six a i {
   color: white;
@@ -403,5 +403,41 @@ p {
   100% {
     -webkit-transform: rotate(-36deg);
     transform: rotate(-36deg); } }
+.seven {
+  background-image: url("../images/section6-bg.png");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover; }
+  .seven img {
+    margin-top: -38px; }
+  .seven h2 {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 20px;
+    letter-spacing: 3px;
+    color: #f3f3f3;
+    text-transform: uppercase;
+    padding-top: 80px;
+    margin: 0; }
+  .seven .col-md-6 p:nth-child(2) {
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    color: #abacac;
+    padding-top: 60px;
+    margin: 0; }
+  .seven .col-md-6 p:nth-child(3) {
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+    color: #abacac;
+    text-transform: uppercase;
+    padding-top: 32px;
+    font-weight: bold;
+    margin: 0; }
+  .seven .col-md-6 p:nth-child(4) {
+    padding-bottom: 100px;
+    color: #b2b3b3; }
+  .seven .col-md-6 p span {
+    color: #19bd9a;
+    padding-bottom: 100px; }
 
 /*# sourceMappingURL=style.css.map */
