--- a/css/style.scss
+++ b/css/style.scss
@@ -174,8 +174,10 @@ p {
   padding-top: 117px;
   padding-bottom: 60px;
 }
+
 ////////////////////////////END Section-2///////////////////////////////////
 ////////////////////////////BEGIN Section-3/////////////////////////////////
+
 .third {
   h2 {
     text-align: center;
@@ -187,73 +189,77 @@ p {
     margin-bottom: 65px;
   }
 }
+
 ////////////////////////////END Section-3///////////////////////////////////
 ////////////////////////////BEGIN Section-4/////////////////////////////////
-  .four{
-    .hov{
-      height: 319px;
-      position: relative;
-      padding: 0;
-      &:after{
-        content: "";
-        display: block;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background-color: #000000;
-        color: #FFF;
-        text-align: center;
-        padding-top: 150px;
-        text-transform: uppercase;
-        font-size: 20px;
-        font-weight: lighter;
-        opacity: 0.8;
-      }
-      &:hover{
-        &:after{
-          display: none;
-        }
-      }
-    }
-    .first{
-      background-image: url("../images/section-four-pic1.png");
-      background-repeat: no-repeat;
-      background-attachment: scroll;
-      background-size: cover;
-      &:after{
-        content: "+";
-        font-family: 'Source Sans Pro', sans-serif;
-        font-size: 20px;
-      }
-    }
-    .two{
-      background-image: url("../images/section-four-pic2.png");
-      background-repeat: no-repeat;
-      background-attachment: scroll;
-      background-size: cover;
-      &:after{
-        content: "VINTAGE";
-        font-family: 'Source Sans Pro', sans-serif;
-        font-size: 20px;
-        letter-spacing: 3px;
-      }
-    }
-    .three{
-      background-image: url("../images/section-four-pic3.png");
-      background-repeat: no-repeat;
-      background-attachment: scroll;
-      background-size: cover;
-      &:after{
-        content: "Branding";
-        font-family: 'Source Sans Pro', sans-serif;
-        font-size: 20px;
-        letter-spacing: 3px;
 
+.four{
+  .hov{
+    height: 319px;
+    position: relative;
+    padding: 0;
+    &:after{
+      content: "";
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-color: #000000;
+      color: #FFF;
+      text-align: center;
+      padding-top: 150px;
+      text-transform: uppercase;
+      font-size: 20px;
+      font-weight: lighter;
+      opacity: 0.8;
+    }
+    &:hover{
+      &:after{
+        display: none;
       }
     }
   }
+  .first{
+    background-image: url("../images/section-four-pic1.png");
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    &:after{
+      content: "+";
+      font-family: 'Source Sans Pro', sans-serif;
+      font-size: 20px;
+    }
+  }
+  .two{
+    background-image: url("../images/section-four-pic2.png");
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    &:after{
+      content: "VINTAGE";
+      font-family: 'Source Sans Pro', sans-serif;
+      font-size: 20px;
+      letter-spacing: 3px;
+    }
+  }
+  .three{
+    background-image: url("../images/section-four-pic3.png");
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    &:after{
+      content: "Branding";
+      font-family: 'Source Sans Pro', sans-serif;
+      font-size: 20px;
+      letter-spacing: 3px;
+
+    }
+  }
+}
+
 ////////////////////////////END Section-4///////////////////////////////////
 ////////////////////////////BEGIN Section-5/////////////////////////////////
+
 .five{
   background-image: url("../images/green-line.png");
   width: 100%;
@@ -266,10 +272,11 @@ p {
       padding-top: 45px;
       padding-bottom: 45px;
       color: #fff;
+      margin: 0;
     }
   }
   .col-md-3{
-    padding: 50px;
+    padding-top: 50px;
     a{
       border: 1px solid white;
       padding: 12px 24px;
@@ -279,17 +286,20 @@ p {
       font-family: 'Open Sans', sans-serif;
       font-size: 16px;
       letter-spacing: 2px;
+      //display: inline-block;
     }
   }
 }
+
 ////////////////////////////END Section-5///////////////////////////////////
 ////////////////////////////BEGIN Section-6/////////////////////////////////
+
 .six{
   background-color: #f3f3f3;
   h2{
     margin: 0;
     padding-top: 81px;
-    padding-bottom: 42px;
+    margin-bottom: 42px;
     text-align: center;
     letter-spacing: 3px;
   }
@@ -298,7 +308,7 @@ p {
     text-align: center;
   }
   .col-md-1{
-    padding-top: 61px;
+    margin-top: 61px;
   }
   .col-md-5 {
     h2 {
@@ -335,22 +345,22 @@ p {
   }
 }
 .six {
-    a i {
-      color: white;
-      background-color: #81868e;
-      border-radius: 50%;
-      height: 55px;
-      width: 55px;
-      text-align: center;
-      padding-top: 15px;
-      font-size: 28px;
-      margin: auto;
-      margin-bottom: 17px;
-      &:hover {
-        background-color: #19bd9a;
-      }
+  a i {
+    color: white;
+    background-color: #81868e;
+    border-radius: 50%;
+    height: 55px;
+    width: 55px;
+    text-align: center;
+    padding-top: 15px;
+    font-size: 28px;
+    margin: auto;
+    margin-bottom: 17px;
+    &:hover {
+      background-color: #19bd9a;
     }
   }
+}
 ////////////////////////////Progress bar////////////////////////////////
 .progress{
   width: 125px;
@@ -414,7 +424,7 @@ p {
   transform-origin: center;
   -webkit-transform-origin: right;
   transform-origin: right;
-  }
+}
 .progress.blue .progress-right .progress-bar{
   animation: loading-2 1.5s linear forwards 1.8s;
 }
@@ -436,7 +446,7 @@ p {
   position: absolute;
   top: 0%;
   left: 5%;
-  }
+}
 //.progress .progress-value {
 //  width: 85%;
 //  height: 85%;
@@ -459,14 +469,14 @@ p {
   animation: loading-1 1.8s linear forwards; }
 
 @keyframes loading-1{
- 0%{
-   -webkit-transform:rotateZ(0deg);
-   transform: rotateZ(0deg);
- }
+  0%{
+    -webkit-transform:rotateZ(0deg);
+    transform: rotateZ(0deg);
+  }
   100%{
-   -webkit-transform: rotateZ(-180deg);
-   transform: rotateZ(-180deg);
- }
+    -webkit-transform: rotateZ(-180deg);
+    transform: rotateZ(-180deg);
+  }
 }
 @keyframes loading-2{
   0%{
@@ -502,8 +512,10 @@ p {
 //@media only screen and (max-width: 990px){
 //  .progress{ margin-bottom: 20px; }
 //}
+
 ////////////////////////////END Section-6///////////////////////////////////
 ////////////////////////////BEGIN Section-7/////////////////////////////////
+
 .seven{
   background-image: url("../images/section6-bg.png");
   width: 100%;
@@ -549,5 +561,19 @@ p {
     }
   }
 }
+
 ////////////////////////////END Section-7///////////////////////////////////
 ////////////////////////////BEGIN Section-8/////////////////////////////////
+/////////////////////media-queris/////////////////////////
+@media only screen and (max-width: 1024px) {
+   }
+@media only screen and (max-width: 992px) {
+   }
+@media only screen and (max-width: 768px) {
+  }
+@media only screen and (max-width: 375px) {
+   }
+@media only screen and (max-width: 360px) {
+   }
+@media only screen and (max-width: 320px) {
+}
