--- a/css/style.css
+++ b/css/style.css
@@ -441,4 +441,44 @@ p {
     color: #19bd9a;
     padding-bottom: 100px; }
 
+@media only screen and (max-width: 992px) {
+  .six .col-md-6 .col-md-4 div {
+    display: inline-block; } }
+@media only screen and (max-width: 768px) {
+  img {
+    width: 90%; }
+
+  .navbar-toggle .icon-bar {
+    background-color: #fff; }
+
+  .navbar-toggle {
+    border: solid 1px #fff;
+    margin-top: 45px; }
+
+  .nav {
+    padding-top: 0; }
+
+  header h2 {
+    padding-top: 80px; }
+
+  .first .col-md-6 h2 {
+    padding-top: 38px; }
+
+  .first .col-md-4 img {
+    padding-top: 0; }
+
+  .second .col-md-7 p {
+    padding-top: 0px;
+    padding-bottom: 40px; }
+
+  .five .col-md-3 {
+    padding-top: 50px;
+    margin-bottom: 50px; }
+
+  .five .col-md-8 p {
+    padding-bottom: 0; } }
+@media only screen and (max-width: 375px) {
+  .circle {
+    left: 45%; } }
+
 /*# sourceMappingURL=style.css.map */
