--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-header {
+.top {
   background-image: url("../images/bg_header.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
