--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,4 @@
-header{
+.top{
   background-image: url("../images/bg_header.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -564,6 +564,11 @@ p {
 
 ////////////////////////////END Section-7///////////////////////////////////
 ////////////////////////////BEGIN Section-8/////////////////////////////////
+
+
+
+
+
 /////////////////////media-queris/////////////////////////
 @media only screen and (max-width: 1024px) {
    }
