--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
   border-radius: 50px;
   padding: 9px 20px; }
 
-.nav li a:hover, .nav li a:visited {
+.nav li a:hover, .nav li a:visited, .nav li a:active, .nav li a:focus {
   border: white 1px solid;
   background-color: rgba(0, 0, 0, 0); }
 
@@ -440,6 +440,42 @@ p {
   .seven .col-md-6 p span {
     color: #19bd9a;
     padding-bottom: 100px; }
+
+.eight {
+  background-color: #f3f3f3; }
+  .eight h2 {
+    text-align: center;
+    margin: 0;
+    padding-top: 80px; }
+  .eight p {
+    text-align: center;
+    margin-top: 42px;
+    margin-bottom: 80px; }
+  .eight .menu {
+    margin-bottom: 77px;
+    text-align: center; }
+    .eight .menu li {
+      margin-right: 42px;
+      display: inline-block; }
+    .eight .menu a {
+      font-family: "Open Sans", sans-serif;
+      font-size: 16px;
+      color: #575757;
+      text-decoration: none;
+      letter-spacing: 1px; }
+      .eight .menu a:after {
+        content: '';
+        display: block;
+        height: 1px;
+        width: 38px;
+        margin: auto;
+        margin-top: 14px;
+        background-color: #f3f3f3; }
+      .eight .menu a:hover {
+        text-decoration: none; }
+
+.eight .menu a:hover::after {
+  background-color: #19bd9a; }
 
 @media only screen and (max-width: 992px) {
   .six .col-md-6 .col-md-4 div {
