--- a/css/style.scss
+++ b/css/style.scss
@@ -26,7 +26,7 @@
   border-radius: 50px;
   padding: 9px 20px;
 }
-.nav li a:hover, .nav li a:visited{
+.nav li a:hover, .nav li a:visited, .nav li a:active, .nav li a:focus{
   border: white 1px solid;
   background-color: rgba(0, 0, 0, 0);
 }
@@ -564,10 +564,50 @@ p {
 
 ////////////////////////////END Section-7///////////////////////////////////
 ////////////////////////////BEGIN Section-8/////////////////////////////////
+.eight{
+  background-color: #f3f3f3;
+  h2{
+    text-align: center;
+    margin: 0;
+    padding-top: 80px;
+  }
+  p{
+    text-align: center;
+    margin-top: 42px;
+    margin-bottom: 80px;
+  }
+  .menu{
+    margin-bottom: 77px;
+    text-align: center;
+    li{
+      margin-right: 42px;
+      display: inline-block;
+    }
+    a{
+      font-family: "Open Sans", sans-serif;
+      font-size: 16px;
+      color: #575757;
+      text-decoration: none;
+      letter-spacing: 1px;
+      &:after{
+        content: '';
+        display: block;
+        height: 1px;
+        width: 38px;
+        margin: auto;
+        margin-top: 14px;
+        background-color: #f3f3f3;
+      }
+     &:hover{
+        text-decoration: none;
+      }
+    }
+  }
+  }
 
-
-
-
+.eight .menu  a:hover::after{
+  background-color: #19bd9a;
+}
 
 /////////////////////media-queris/////////////////////////
 @media only screen and (max-width: 1024px) {
