create a 8 section (gallery)

--- a/css/style.scss
+++ b/css/style.scss
@@ -608,8 +608,12 @@ p {
 .eight .menu  a:hover::after{
   background-color: #19bd9a;
 }
+////////////////////////////END Section-8///////////////////////////////////
 
-/////////////////////media-queris/////////////////////////
+
+
+
+/////////////////////BEGIN MEDIA-QUERIES/////////////////////////
 @media only screen and (max-width: 1024px) {
    }
 
